fix z-index on Reviewer Tools nav

--- a/media/css/devreg/header.less
+++ b/media/css/devreg/header.less
@@ -5,6 +5,7 @@
     background: darken(#3f4f5b, 5%) @grain-src;
     background-size: 100px 100px;
     height: 80px;
+    z-index: 1;
     .upper-header {
         position: relative;
         z-index: 1006;
@@ -113,7 +114,7 @@
     border-bottom: 1px solid @border-gray;
     height: 44px;
     position: relative;
-    z-index: 1;
+    z-index: 2;
     .menu-nav > ul {
         > li {
             border-left: 1px dotted @light-gray;
